--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-"Test" 
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title>Mystee's Github Page</title>
+    </head>
+    <body>
+        <h1>Just a small page with some stuff I mess around with</h1>
+        <p>Lets just say graphic design is not my strong suit</p>
+        <br>
+        <h2>Mandelbrot Set renderer</h2>
+        <a href="MandelbrotSet.html"><p>A mandelbrot set renderer I wrote in javascript when I was bored on a holiday</p></a>
+
+        <h2>tmysql4 UTime implementation</h2>
+        <a href="https://github.com/mystee/utime-tmysql4"><p>A fork of an addon for garrysmod switching out SQLite use for mysql</p></a>
+    </body>
+</html>
