--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Mystee's Github Page</title>
+        <title>Github Page</title>
     </head>
     <body>
         <h1>Just a small page with some stuff I mess around with</h1>
